RESOLVED FIXED66168
[chromium] Fix compositor breakage due to duplicate context creation AND by context-lost
https://bugs.webkit.org/show_bug.cgi?id=66168
Summary [chromium] Fix compositor breakage due to duplicate context creation AND by c...
Nat Duca
Reported 2011-08-12 14:35:17 PDT
[chromium] Fix compositor breakage due to duplicate context creation AND by context-lost
Attachments
Patch (1.79 KB, patch)
2011-08-12 14:35 PDT, Nat Duca
fishd: review+
Nat Duca
Comment 1 2011-08-12 14:35:32 PDT
Nat Duca
Comment 2 2011-08-12 14:41:32 PDT
Note You need to log in before you can comment on or make changes to this bug.