[chromium] Fix compositor breakage due to duplicate context creation AND by context-lost https://bugs.webkit.org/show_bug.cgi?id=66168

* platform/graphics/chromium/cc/CCLayerTreeHost.cpp:
(WebCore::CCLayerTreeHost::CCLayerTreeHost):
(WebCore::CCLayerTreeHost::initialize):

Canonical link: https://commits.webkit.org/82021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92999 268f45cc-cd09-0410-ab3c-d52691b4dbfc